<resources>
    <string name="app_name">আজকের কৃষি</string>
    <string name="info">কৃষি তথ্য</string>
    <string name="tech">কৃষি প্রযুক্তি</string>
    <string name="contact">যোগাযোগ</string>
    <string name="Fisheries">মৎস্য সম্পদ</string>
    <string name="advice">পরামর্শ নিন</string>
    <string name="member">সদস্য হউন</string>
    <string name="farming">চাষাবাদ</string>
    <string name="livestock">প্রাণী সম্পদ</string>
    <string name="city">ছাদ কৃষি</string>
    <string name="entrepreneur">কৃষি উদ্যোক্তা</string>
    <string name="pest">পোকামাকড় ও রোগবালাই</string>
</resources>